# CardashBoard

./: ApiTester.cpp  CMakeLists.txt  README.md  Resources.qrc  add_user.cpp  add_user.h  add_user.ui  cardashboard.qml  dashboard.cpp  dashboard.h  dashboard.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  user_prefrence.cpp  user_prefrence.h  user_prefrence.ui
API/: CMakeLists.txt  api.cpp  api.h
DataBase/: CMakeLists.txt  data.cpp  data.h
Details/: CMakeLists.txt  details.cpp  details.h
